objects/UDC__c.object
<CustomObject>
    <fields>
        <fullName>CodDefUsuario__c</fullName>
        <label>CodDefUsuario</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodProd__c</fullName>
        <description>Código do sistema (Módulo)</description>
        <inlineHelpText>Código do sistema (Módulo)</inlineHelpText>
        <label>CodProd</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodUs__c</fullName>
        <label>CodUs</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descricao2__c</fullName>
        <label>Descricao2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Internal Id</label>
        <length>46</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_MX_FilterKey__c</fullName>
        <description>Key used due to account filters limits in Mexico</description>
        <formula>CASE(RecordType.DeveloperName,
      &apos;LAT_MX_UDC_Standard&apos;,(CodUs__c + &apos;-&apos; + CodProd__c + &apos;-MX&apos;),
      &apos;BRA_Standard&apos;,(CodUs__c + &apos;-&apos; + CodProd__c + &apos;-BR&apos;),
      &apos;Standard_AR&apos;,(CodUs__c + &apos;-&apos; + CodProd__c + &apos;-AR&apos;),
      &apos;Standard_UY&apos;,(CodUs__c + &apos;-&apos; + CodProd__c + &apos;-UY&apos;),
      &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CODUS-CODPROD-COUNTRY RT</inlineHelpText>
        <label>Filter Key</label>
        <type>Text</type>
    </fields>
    <label>UDC_Tabela</label>
    <listViews>
        <fullName>AR_Ciudades_00_CT</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>00</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <label>AR Ciudades (00-CT)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Compensaci_n_LM_55_GL</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>55</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>GL</value>
        </filters>
        <label>AR Compensación LM (55-GL)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Condiciones_de_Pago_CRM_PT</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>AR Condiciones de Pago (CRM-PT)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Gerencia_01_01</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <label>AR Gerencia (01-01)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Gerente_de_Cobro_01_CM</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>CM</value>
        </filters>
        <label>AR Gerente de Cobro (01-CM)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Instrumento_de_Pago_00_PY</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>00</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>PY</value>
        </filters>
        <label>AR Instrumento de Pago (00-PY)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Lista_de_Precios_40_PC</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>40</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>PC</value>
        </filters>
        <label>AR Lista de Precios (40-PC)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Organizacao_01_11</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>AR Organizacao (01-11)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Sub_Canal_01_03</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>03</value>
        </filters>
        <label>AR Sub Canal (01-03)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Unidad_de_Negocio_CRM_DF</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>DF</value>
        </filters>
        <label>AR Unidad de Negocio (CRM-DF)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AR_Vendedor_01_02</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.Standard_AR</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <label>AR Vendedor (01-02)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>BR_Bancos_76_BC</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>Descricao2__c</columns>
        <columns>CodDefUsuario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>76</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>BC</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.BRA_Standard</value>
        </filters>
        <label>BR Bancos (76-BC)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_Bandeira_01_06</fullName>
        <columns>CodDefUsuario__c</columns>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>Descricao2__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>06</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.BRA_Standard</value>
        </filters>
        <label>BR Bandeira (01-06)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_Cidades_00_CT</fullName>
        <columns>NAME</columns>
        <columns>CodProd__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>Descricao2__c</columns>
        <columns>Internal_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>00</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.BRA_Standard</value>
        </filters>
        <label>BR Cidades (00-CT)</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>BR_Condicion_de_PAgo</fullName>
        <columns>NAME</columns>
        <columns>CodDefUsuario__c</columns>
        <columns>CodUs__c</columns>
        <columns>CodProd__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UDC__c.BRA_Standard</value>
        </filters>
        <filters>
            <field>CodProd__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <filters>
            <field>CodUs__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>BR - Condicion de Pago</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Descricao1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC_Tabela</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_UDC_Standard</fullName>
        <active>true</active>
        <description>Record Type standard for Mexico</description>
        <label>MX Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>